        - Conversion of standard TEI P5 should now work, at least
          in some cases.
        - Option --xmlid-to-textsigle <from-regex>@<to-c/to-d/to-t>
          added to convert standard P5 text id attributes to I5
          sigles with three parts.

2.3.4 2022-11-09
        - Improve stability of XML entity replacement.
        - Check version for script and KorAP-Tokenizer
          library when requested.

2.3.3 2022-03-30
        - Load KorAP-Tokenizer only on request.

2.3.2 2022-03-23
        - Do not reference metadata.xml
        - Remove schema references from header files.
        - Improve test suite for unability to use
          KorAP-Tokenizer.

2.3.1 2022-01-14 Release
        - Improve script handling of broken data
        - Improve handling of unknown header types
        - Check for valid sigles to avoid broken directories
        - Introduce exclusivity for inline tokens handling.
        - Use single dash for STDIN.
        - Update KorAP-Tokenizer to v2.2.2 (single quote, "du." bug fixes)

2.2.0 2021-08-26 Release
        - Remove unnecessary branch in recursive call
        - Support inline-structures parameter
        - Introduce --base-foundry, --data-file, and --header-file parameters
        - Introduce --tokens-file parameter
        - Introduce --skip-inline-tokens parameter
        - Minor cleanups and improvements
        - Introduce --skip-inline-tags parameter
        - Introduce KorAP::XML::TEI::Inline class
        - Introduce --skip-inline-token-annotations parameter
        - Deprecate KORAPXMLTEI_INLINE environment variable
          in favor of --skip-inline-token-annotations

1.0.0 2021-02-18 Release
        - -s option added that uses sentence boundaries
          provided by the KorAP tokenizer (-tk)
        - Tokenizer invocation comments removed from KorAP XML output
        - Indentation of </span> tags fixed
        - Character entities used in DeReKo are automatically